--- a/src/app/shared/components/upload-task/upload-task.component.html
+++ b/src/app/shared/components/upload-task/upload-task.component.html
@@ -1,11 +1,11 @@
-<div *ngIf="percentage | async as pct">
+<!-- <div *ngIf="percentage | async as pct">
   <progress [value]="pct" max="100"></progress>
   {{ pct | number }}%
-</div>
+</div> -->
 <div *ngIf="snapshot | async as snap">
-  {{ snap.bytesTransferred }} de {{ snap.totalBytes }}
+  <!-- {{ snap.bytesTransferred }} de {{ snap.totalBytes }} -->
   <div *ngIf="downloadURL as url">
-    <h3>Resultados!</h3>
+    <!-- <h3>Resultados!</h3> -->
     <img [src]="url"><br>
     <!-- <a [href]="url" target="_blank" rel="noopener">Download Me!</a> -->
   </div>
