--- a/src/app/main/pages/andon/report-2nd-step/report-2nd-step.component.html
+++ b/src/app/main/pages/andon/report-2nd-step/report-2nd-step.component.html
@@ -30,21 +30,25 @@
                         Campo <strong>requerido.</strong>
                     </mat-error>
                 </mat-form-field>
+                    <div class="dropzone" appDropzone (hovered)="toggleHover($event)" (dropped)="onDrop($event)"
+                        [class.hovering]="isHovering">
+                        <p>Drag and Drop a Files</p>
+                        <div class="file">
+                            <label class="file-label">
+                            <input class="file-input" type="file" (change)="onDrop($event.target.files)">                    
+                              <span class="file-cta">
+                                <span class="file-label">
+                                  or choose a file…
+                                </span>
+                              </span>
+                            </label>
+                          </div>
+                        </div>
+                    <h3>Uploads</h3>
 
-                <div *ngFor="let imgUpload of imagesUpload;let i=index">
-                    <label [for]="i">
-                        <mat-card class="mat-elevation-z0">
-                            <img [src]="imgUpload" onError="this.src='../../../../../../../assets/img/camara.png'" class="report__form--img"/>
-                            <mat-card-actions *ngIf="imgUpload" align="end">
-                                <button mat-icon-button (click)="deleteImage(imgForDelete,i)">
-                                    <mat-icon color="warn">delete</mat-icon>
-                                </button>
-                            </mat-card-actions>
-                        </mat-card>
-                        <br>
-                    </label>
-                    <input [id]="i" type="file" style="display: none;" (change)="uploadFile($event,i)" accept="image/x-png, image/jpg, image/jpeg" />
-                </div>
+                    <div *ngFor="let file of files">
+                        <app-upload-task [file]="file" [id]="currentId" [module]="module"></app-upload-task>
+                    </div>               
                 
                 <button mat-button type="submit" class="btn" (click)="save()" >
                    GUARDAR
