--- a/src/app/main/pages/andon/reports/dialogs/return-dialog/return-dialog.component.html
+++ b/src/app/main/pages/andon/reports/dialogs/return-dialog/return-dialog.component.html
@@ -25,26 +25,25 @@
             
         </div>
 
-        <div *ngFor="let img of images;let i=index;" class="form__image1">
-            <a [href]="img" target="_blank" style="cursor: zoom-in">
-                <img [src]="img" *ngIf="img" class="form__image1--image">
-            </a>
-        </div>
+        <div class="dropzone" appDropzone (hovered)="toggleHover($event)" (dropped)="onDrop($event)"
+            [class.hovering]="isHovering">
+            <p>Drag and Drop a Files</p>
+            <div class="file">
+                <label class="file-label">
+                <input class="file-input" type="file" (change)="onDrop($event.target.files)">                    
+                <span class="file-cta">
+                    <span class="file-label">
+                    or choose a file…
+                    </span>
+                </span>
+                </label>
+            </div>
+            </div>
+        <h3>Uploads</h3>
 
-        <div *ngFor="let imgUpload of imagesUpload;let i=index" class="form__image2">
-            <label [for]="i">
-                <mat-card class="mat-elevation-z0">
-                    <img [src]="imgUpload" onError="this.src='../../../../../../../assets/img/camara.png'" class="form__image2--imgUpload"/>
-                    <mat-card-actions *ngIf="imgUpload" align="end">
-                        <button mat-icon-button (click)="deleteImage(imgForDelete,i)">
-                            <mat-icon color="warn">delete</mat-icon>
-                        </button>
-                    </mat-card-actions>
-                </mat-card>
-                <br>
-            </label>
-            <input [id]="i" type="file" style="display: none;" (change)="uploadFile($event,i)" accept="image/x-png, image/jpg, image/jpeg" />
-        </div>
+        <div *ngFor="let file of files">
+            <app-upload-task [file]="file" [id]="data.id" [module]="module"></app-upload-task>
+        </div>                          
 
     </form>
 </mat-dialog-content>
