--- a/src/app/shared/components/upload-task/upload-task.component.html
+++ b/src/app/shared/components/upload-task/upload-task.component.html
@@ -10,12 +10,9 @@
     {{ snap.bytesTransferred }} of {{ snap.totalBytes }} 
   
     <div *ngIf="downloadURL as url">
-      <h3>Results!</h3>
-      <img [src]="url"><br>
-      <a [href]="url" target="_blank" rel="noopener">Download Me!</a>
+      <a [href]="url" target="_blank" style="cursor: zoom-in">
+        <img [src]="url"  class="imageUpload">
+      </a>
     </div> 
   
-    <button (click)="task.pause()" [disabled]="!isActive(snap)">Pause</button>
-    <button (click)="task.cancel()" [disabled]="!isActive(snap)">Cancel</button>
-    <button (click)="task.resume()" [disabled]="!(snap?.state === 'paused')">Resume</button>
   </div>
