--- a/src/app/main/pages/andon/report-2nd-step/report-2nd-step.component.html
+++ b/src/app/main/pages/andon/report-2nd-step/report-2nd-step.component.html
@@ -32,13 +32,13 @@
                 </mat-form-field>
                     <div class="dropzone" appDropzone (hovered)="toggleHover($event)" (dropped)="onDrop($event)"
                         [class.hovering]="isHovering">
-                        <p>Drag and Drop a Files</p>
+                        <p>Arrastra aqui imagenes</p>
                         <div class="file">
                             <label class="file-label">
                             <input class="file-input" type="file" (change)="onDrop($event.target.files)">                    
                               <span class="file-cta">
                                 <span class="file-label">
-                                  or choose a file…
+                                  Seleccione una imagen
                                 </span>
                               </span>
                             </label>
