--- a/src/app/main/pages/andon/report-2nd-step/report-2nd-step.component.html
+++ b/src/app/main/pages/andon/report-2nd-step/report-2nd-step.component.html
@@ -35,7 +35,7 @@
                         <p>Arrastra aqui imagenes</p>
                         <div class="file">
                             <label class="file-label">
-                            <input class="file-input" type="file" (change)="onDrop($event.target.files)">                    
+                            <input class="file-input" type="file" (change)="onDrop($event.target.files)" >                    
                               <span class="file-cta">
                                 <span class="file-label">
                                   Seleccione una imagen
@@ -47,7 +47,7 @@
                     <h3>Uploads</h3>
 
                     <div *ngFor="let file of files">
-                        <app-upload-task [file]="file" [id]="currentId" [module]="module"></app-upload-task>
+                        <app-upload-task [file]="file" [pathStorage]="pathStorage" (onNewImage)="addNewImage($event)"> </app-upload-task> 
                     </div>               
                 
                 <button mat-button type="submit" class="btn" (click)="save()" >
