--- a/src/app/shared/components/upload-task/upload-task.component.html
+++ b/src/app/shared/components/upload-task/upload-task.component.html
@@ -7,11 +7,11 @@
 <div *ngIf="snapshot | async as snap">
   {{ snap.bytesTransferred }} of {{ snap.totalBytes }}
 
-  <div *ngIf="downloadURL as url">
+  <mat-card *ngIf="downloadURL as url" class="mat-elevation-z0">
     <a [href]="url" target="_blank" style="cursor: zoom-in">
       <img [src]="url" class="imageUpload" />
     </a>
-  </div>
+  </mat-card>
   <hr />
   
 
