--- a/src/app/main/pages/andon/report-2nd-step/report-2nd-step.component.html
+++ b/src/app/main/pages/andon/report-2nd-step/report-2nd-step.component.html
@@ -32,7 +32,7 @@
                 </mat-form-field>
                     <div class="dropzone" appDropzone (hovered)="toggleHover($event)" (dropped)="onDrop($event)"
                         [class.hovering]="isHovering">
-                        <p>Arrastra aqui imagenes</p>
+                        <p>Arrastra imagenes aqui</p>
                         <div class="file">
                             <label class="file-label">
                             <input class="file-input" type="file" (change)="onDrop($event.target.files)" >                    
