--- a/src/app/main/pages/andon/reports/dialogs/return-dialog/return-dialog.component.html
+++ b/src/app/main/pages/andon/reports/dialogs/return-dialog/return-dialog.component.html
@@ -25,17 +25,15 @@
             
         </div>
 
-        <div *ngFor="let img of images; let i = index;" class="form__image1" >
+        <mat-card *ngFor="let img of images; let i = index;" class="form__image1" class="mat-elevation-z0" >
             <a [href] = "img" target="_blank" style="cursor:zoom-in">
                 <img [src]="img" *ngIf="img" class="form__image1--image">
-
-            </a>
-            
-        </div>
+            </a>            
+        </mat-card>
 
         <div class="dropzone" appDropzone (hovered)="toggleHover($event)" (dropped)="onDrop($event)"
             [class.hovering]="isHovering">
-            <p>Arrastra aqui imagenes</p>
+            <p>Arrastra imagenes aqui</p>
             <div class="file">
                 <label class="file-label">
                 <input class="file-input" type="file" (change)="onDrop($event.target.files)">                    
