--- a/src/app/main/pages/evaluations/evaluations-progress/dialogs/evaluations-images-dialog/evaluations-images-dialog.component.html
+++ b/src/app/main/pages/evaluations/evaluations-progress/dialogs/evaluations-images-dialog/evaluations-images-dialog.component.html
@@ -22,17 +22,24 @@
         </div>
         <div class="dropzone" appDropzone (hovered)="toggleHover($event)" (dropped)="onDrop($event)"
             [class.hovering]="isHovering">
-            <h3>Drop Zone</h3>
-            <p>Arrastrar imágenes aquí</p>
-            <!-- <button>HOLA</button> -->
+            <p>Arrastra aqui imagenes</p>
+            <div class="file">
+                <label class="file-label">
+                    <input class="file-input" type="file" (change)="onDrop($event.target.files)">
+                    <span class="file-cta">
+                        <span class="file-label">
+                            Seleccione una imagen
+                        </span>
+                    </span>
+                </label>
+            </div>
         </div>
         <!-- <h3>Uploads</h3> -->
-        <div *ngFor="let file of files;let i = index">
+        <div *ngFor="let file of files;let i = index" style="display: flex;flex-direction: column;align-items: center;">
             <app-upload-task [file]="file" [pathStorage]="pathStorage" (onNewImage)="addNewImage($event)">
             </app-upload-task>
-            <mat-divider></mat-divider>
         </div>
-        
+
     </mat-dialog-content>
     <mat-dialog-actions align="end">
         <button type="button" mat-stroked-button color="warn" class="footer__btn-close" mat-dialog-close
