--- a/src/app/main/pages/evaluations/evaluations-history/dialogs/history-edit-dialog/history-edit-dialog.component.scss
+++ b/src/app/main/pages/evaluations/evaluations-history/dialogs/history-edit-dialog/history-edit-dialog.component.scss
@@ -8,3 +8,10 @@
     column-gap: 1em;
     grid-template-columns: 1fr 1fr;
 }
+
+.btn-add {
+    border: 1px #6200ee solid;
+    color: #6200ee;
+    margin-left: 10px;
+    padding: 0px 20px 0px 20px;
+  }
