--- a/src/app/main/pages/evaluations/evaluations-progress/dialogs/evaluations-finalize-dialog/evaluations-finalize-dialog.component.scss
+++ b/src/app/main/pages/evaluations/evaluations-progress/dialogs/evaluations-finalize-dialog/evaluations-finalize-dialog.component.scss
@@ -76,3 +76,10 @@ img {
     object-fit: contain;
     cursor: pointer;
 }
+
+.btn-add {
+    border: 1px #6200ee solid;
+    color: #6200ee;
+    margin-left: 10px;
+    padding: 0px 20px 0px 20px;
+  }
