:bug: :art: image text in observation

--- a/src/app/main/pages/evaluations/evaluations-progress/dialogs/evaluations-observations-dialog/evaluations-observations-dialog.component.scss
+++ b/src/app/main/pages/evaluations/evaluations-progress/dialogs/evaluations-observations-dialog/evaluations-observations-dialog.component.scss
@@ -61,10 +61,11 @@
         margin-bottom: 10px;
         display: flex;
         flex-direction: row;
+        justify-content: space-between;
 
         &--img {
-            width: 123px;
-            height: 82px;
+            // width: 123px;
+            // height: 82px;
         }
 
         &--question {
