--- a/src/app/main/pages/evaluations/evaluations-progress/dialogs/evaluations-observations-dialog/evaluations-observations-dialog.component.scss
+++ b/src/app/main/pages/evaluations/evaluations-progress/dialogs/evaluations-observations-dialog/evaluations-observations-dialog.component.scss
@@ -61,7 +61,7 @@
         margin-bottom: 10px;
         display: flex;
         flex-direction: row;
-        justify-content: space-between;
+        // justify-content: space-between;
 
         &--img {
             // width: 123px;
