--- a/src/app/main/pages/evaluations/evaluations-progress/evaluations-progress.component.scss
+++ b/src/app/main/pages/evaluations/evaluations-progress/evaluations-progress.component.scss
@@ -56,7 +56,7 @@
         &--select {
             display: flex;
             min-width: 50px;
-            width: 20%;
+            width: 30%;
             padding-left: 25px;
             font-family: "Montserrat", sans-serif;
             font-size: 14px;
@@ -65,18 +65,38 @@
             height: 40px;
             align-self: center;
             border-radius: 20px 20px;
-            margin-right: 20px;
+            margin-right: 15px;
+            
+            &-icon{
+                margin-right: 10px;
+                margin-left: 12px;
+                color: #cbcbcb;
+                width: 30px;
+                height: 35px;
+            }
+            
+            &-input{
+               position: relative;
+               top: -5px;
+               font-family: "Montserrat", sans-serif;
+               color: #333333;
+               font-weight: 400;
+               width: 265px;
+            }
         }
 
         &--input {
             width: 100%;
             margin-top: 0;
-            color: #828282;
+            font-family: "Montserrat", sans-serif;
+            color: #333333;
             border: transparent;
             border-radius: 0px 20px 20px 20px;
 
             &::placeholder {
-                color: #aeaeae;
+                color: #333333;
+                font-family: "Montserrat", sans-serif;
+                font-weight: 400;
             }
             &:focus {
                 outline: none;
@@ -101,6 +121,14 @@
         //border: 1px solid #333333;
         border-radius: 0px 30px 0px 0px;
     }
+}
+.mat-option{
+    color: #333333;
+}
+.select-input{
+    color: #333333; 
+    font-family: "Montserrat", sans-serif;
+    font-weight: 400;
 }
 
 .cards-container {
