--- a/src/app/main/pages/evaluations/evaluations-requests/evaluations-requests.component.html
+++ b/src/app/main/pages/evaluations/evaluations-requests/evaluations-requests.component.html
@@ -8,10 +8,11 @@
       <span class="ms-fill"></span>
       
       <div class="requests__title--select mat-elevation-z4" >
-        <mat-form-field style="width: 90%">
-          <mat-select [formControl]="workshopControl" class="requests__title--input" >
-            <mat-option value="">-Todos-</mat-option>
-            <mat-option *ngFor="let item of workshops" [value]="item.code">
+        <mat-form-field style="width: 1000px" style="border: none;" appearance="null" > 
+          <mat-icon matPrefix class="requests__title--select-icon">local_convenience_store</mat-icon>
+          <mat-select [formControl]="workshopControl" class="requests__title--select-input" >
+            <mat-option value="" >Todos</mat-option>
+            <mat-option   *ngFor="let item of workshops" [value]="item.code">
               {{item.location}}
             </mat-option>
           </mat-select>
@@ -23,7 +24,7 @@
           <mat-icon>search</mat-icon>
         </button>
         <form [formGroup]="searchForm" style="margin-top:10px;">
-          <input matInput placeholder="Buscar" name="search" class="requests__title--input" formControlName="ot" />
+          <input matInput placeholder="Buscar" name="search" class="requests__title--input" formControlName="ot" style="color: #333333; " />
         </form>
       </div>
 
