--- a/src/app/main/pages/evaluations/evaluations-requests/evaluations-requests.component.scss
+++ b/src/app/main/pages/evaluations/evaluations-requests/evaluations-requests.component.scss
@@ -34,7 +34,7 @@
 
             .mat-icon {
                 font-size: 35px;
-                width: 35px;
+                width: 20px;
                 height: 35px;
             }
         }
@@ -42,7 +42,7 @@
         &--select {
             display: flex;
             min-width: 50px;
-            width: 20%;
+            width: 30%;
             padding-left: 25px;
             font-family: "Montserrat", sans-serif;
             font-size: 14px;
@@ -51,7 +51,24 @@
             height: 40px;
             align-self: center;
             border-radius: 20px 20px;
-            margin-right: 20px;
+            margin-right: 15px;
+            
+            &-icon{
+                margin-right: 10px;
+                margin-left: 12px;
+                color: #cbcbcb;
+                width: 30px;
+                height: 35px;
+            }
+            
+            &-input{
+               position: relative;
+               top: -5px;
+               font-family: "Montserrat", sans-serif;
+               color: #333333;
+               font-weight: 400;
+               width: 265px;
+            }
         }
 
         &--search {
@@ -72,12 +89,16 @@
         &--input {
             width: 100%;
             margin-top: 0;
-            color: #828282;
+            font-family: "Montserrat", sans-serif;
+            color: #333333;
             border: transparent;
             border-radius: 0px 20px 20px 20px;
 
             &::placeholder {
-                color: #aeaeae;
+                color: #333333;
+                font-family: "Montserrat", sans-serif;
+                font-weight: 400;
+
             }
             &:focus {
                 outline: none;
@@ -85,7 +106,7 @@
         }
 
         &--button {
-            max-width: 45px;
+            max-width: 35px;
             width: 100%;
             padding: 0 !important;
             color: #cbcbcb;
@@ -102,6 +123,22 @@
         //border: 1px solid #333333;
         border-radius: 0px 30px 0px 0px;
     }
+}
+
+span.mat-option-text{
+    color: #333333;
+}
+.select-input{
+    color: #333333; 
+    font-family: "Montserrat", sans-serif;
+    font-weight: 400;
+    margin-top: 0px;
+}
+
+.form-select{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
 }
 
 .cards-container {
